# The_Barn_Challenge

./: .gitignore  dependencies.repos  fix_physics.py  run_all.sh
src/clearpath_common/clearpath_bt_joy/: CHANGELOG.rst  README.md  package.xml  setup.cfg  setup.py
src/clearpath_common/clearpath_bt_joy/clearpath_bt_joy/: bt_joy_cutoff_node.py  pair_bt_controller.py
src/clearpath_common/clearpath_bt_joy/debian/: udev
src/clearpath_common/clearpath_bt_joy/test/: test_copyright.py  test_flake8.py  test_pep257.py
src/clearpath_common/clearpath_ros2_control/clearpath_bms_broadcaster/: CHANGELOG.rst  CMakeLists.txt  battery_state_broadcaster.xml  package.xml
src/clearpath_common/clearpath_ros2_control/clearpath_bms_broadcaster/doc/: userdoc.rst
src/clearpath_common/clearpath_ros2_control/clearpath_bms_broadcaster/include/battery_state_broadcaster/: battery_state_broadcaster.hpp
src/clearpath_common/clearpath_ros2_control/clearpath_bms_broadcaster/src/: battery_state_broadcaster.cpp  battery_state_broadcaster.yaml
src/clearpath_common/clearpath_ros2_control/clearpath_bms_broadcaster/test/: battery_state_broadcaster_params.yaml  test_battery_state_broadcaster.cpp  test_battery_state_broadcaster.hpp
src/clearpath_generator_tests/clearpath_generator_base_tests/: CMakeLists.txt  package.xml
src/clearpath_generator_tests/clearpath_generator_base_tests/clearpath_generator_base_tests/: generator_tests.py  utils.py
src/clearpath_generator_tests/clearpath_generator_robot_tests/: CMakeLists.txt  package.xml
src/clearpath_generator_tests/clearpath_generator_robot_tests/clearpath_generator_robot_tests/: generate_samples  generator_tests.py  sample_generator.py
src/clearpath_generator_tests/clearpath_generator_robot_tests/samples/test_a200/manipulators/config/: control.yaml  moveit.yaml
src/clearpath_generator_tests/clearpath_generator_robot_tests/samples/test_a200/platform-extras/launch/: platform-extras-service.launch.py
src/clearpath_generator_tests/clearpath_generator_robot_tests/samples/test_a200/platform/config/: control.yaml  diagnostic_aggregator.yaml  diagnostic_updater.yaml  foxglove_bridge.yaml  imu_filter.yaml  localization.yaml  teleop_interactive_markers.yaml  teleop_joy.yaml  twist_mux.yaml
src/clearpath_generator_tests/clearpath_generator_robot_tests/samples/test_a200/platform/launch/: platform-service.launch.py
src/clearpath_generator_tests/clearpath_generator_robot_tests/samples/test_a300/manipulators/config/: control.yaml  moveit.yaml
src/clearpath_generator_tests/clearpath_generator_robot_tests/samples/test_a300/platform-extras/launch/: platform-extras-service.launch.py
src/clearpath_generator_tests/clearpath_generator_robot_tests/samples/test_a300/platform/config/: control.yaml  diagnostic_aggregator.yaml  diagnostic_updater.yaml  foxglove_bridge.yaml  imu_filter.yaml  localization.yaml  teleop_interactive_markers.yaml  teleop_joy.yaml  twist_mux.yaml
src/clearpath_generator_tests/clearpath_generator_robot_tests/samples/test_a300/platform/launch/: platform-service.launch.py
src/clearpath_generator_tests/clearpath_generator_robot_tests/samples/test_a300/sensors/config/: imu_0.yaml
src/clearpath_generator_tests/clearpath_generator_robot_tests/samples/test_a300/sensors/launch/: imu_0.launch.py
src/clearpath_generator_tests/clearpath_generator_robot_tests/samples/test_all_dual_manipulators/manipulators/config/: control.yaml  moveit.yaml
src/clearpath_generator_tests/clearpath_generator_robot_tests/samples/test_all_dual_manipulators/manipulators/launch/: manipulators-service.launch.py
src/clearpath_generator_tests/clearpath_generator_robot_tests/samples/test_all_dual_manipulators/platform/config/: teleop_interactive_markers.yaml  twist_mux.yaml
src/clearpath_generator_tests/clearpath_generator_robot_tests/samples/test_dd100/manipulators/config/: moveit.yaml  (+1 more)
src/clearpath_generator_tests/clearpath_generator_robot_tests/samples/test_dd150/: robot.yaml
src/clearpath_generator_tests/clearpath_generator_robot_tests/samples/test_do150/: robot.yaml
src/clearpath_generator_tests/clearpath_generator_robot_tests/samples/test_j100/: robot.yaml
src/clearpath_generator_tests/clearpath_generator_robot_tests/samples/test_r100/: robot.yaml
(+543 files in other folders)
