<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>clearpath_generator_robot_tests</name>
  <version>0.0.0</version>
  <description>Testing scripts to evaluate the Clearpath robot generators</description>
  <maintainer email="lcamero@clearpathrobotics.com">Luis Camero</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>clearpath_generator_base_tests</depend>
  <depend>clearpath_generator_robot</depend>
  <depend>ros2run</depend>

  <test_depend>clearpath_firmware</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_python</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
